test/errors/stmt_import_as_dunder_debug.py
import math as __debug__
