test/errors/stmt_import_as_dunder_debug.py.expected
test/errors/stmt_import_as_dunder_debug.py:1 error: cannot assign to __debug__
